--- a/index.html
+++ b/index.html
@@ -1,1 +1,480 @@
-Hello World
+
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta charset='utf-8' />
+      <title>The China NGO Project - Registered Offices</title>
+      <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+      <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet'>
+      <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.33.1/mapbox-gl.js'></script>
+      <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.33.1/mapbox-gl.css' rel='stylesheet' />
+
+      <style>
+
+        body {
+          color:#404040;
+          font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
+          margin:0;
+          padding:0;
+          -webkit-font-smoothing:antialiased;
+        }
+
+        * {
+          -webkit-box-sizing:border-box;
+          -moz-box-sizing:border-box;
+          box-sizing:border-box;
+        }
+
+        .sidebar {
+          position:absolute;
+          width:33.3333%;
+          height:100%;
+          top:0;left:0;
+          overflow:hidden;
+          border-right:1px solid rgba(0,0,0,0.25);
+        }
+        .pad2 {
+          padding:20px;
+        }
+
+        .map {
+          position:absolute;
+          left:33.3333%;
+          width:66.6666%;
+          top:0;bottom:0;
+        }
+
+        h1 {
+          font-size:22px;
+          margin:0;
+          font-weight:400;
+          line-height: 20px;
+          padding: 20px 2px;
+        }
+
+        a {
+          color:#404040;
+          text-decoration:none;
+        }
+
+        a:hover {
+          color:#101010;
+        }
+
+        .heading {
+          background:#fff;
+          border-bottom:1px solid #eee;
+          min-height:60px;
+          line-height:60px;
+          padding:0 10px;
+        }
+
+        .listings {
+          height:100%;
+          overflow:auto;
+          padding-bottom:60px;
+        }
+
+        .listings .item {
+          display:block;
+          border-bottom:1px solid #eee;
+          padding:10px;
+          text-decoration:none;
+        }
+
+        .listings .item:last-child { border-bottom:none; }
+        .listings .item .title {
+          display:block;
+          color:#700b0b;
+          font-weight:700;
+        }
+
+        .listings .item .title small { font-weight:400; }
+        .listings .item.active .title,
+        .listings .item .title:hover { color:#df1616; }
+        .listings .item.active {
+          background-color:#f8f8f8;
+        }
+        ::-webkit-scrollbar {
+          width:3px;
+          height:3px;
+          border-left:0;
+          background:rgba(0,0,0,0.1);
+        }
+        ::-webkit-scrollbar-track {
+          background:none;
+        }
+        ::-webkit-scrollbar-thumb {
+          background:#700b0b;
+          border-radius:0;
+        }
+
+        .marker {
+          border: none;
+          cursor: pointer;
+          height: 15px;
+          width: 15px;
+          background-image: url(marker-15.svg);
+          background-color: rgba(0, 0, 0 0);
+          transform: translate(28px, 56px, 0);
+        }
+
+        .clearfix { display:block; }
+        .clearfix:after {
+          content:'.';
+          display:block;
+          height:0;
+          clear:both;
+          visibility:hidden;
+        }
+
+        /* Marker tweaks */
+        .mapboxgl-popup {
+          padding-bottom: 25px;
+          padding-left: 15px;
+
+        }
+
+        .mapboxgl-popup-close-button {
+          display:none;
+        }
+        .mapboxgl-popup-content {
+          font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
+          padding:0;
+
+        }
+        .mapboxgl-popup-content-wrapper {
+          padding:1%;
+
+        }
+        .mapboxgl-popup-content h3 {
+          background:#df1616;
+          color:#fff;
+          margin:0;
+          display:block;
+          padding:10px;
+          border-radius:3px 3px 0 0;
+          font-weight:700;
+          margin-top:-15px;
+        }
+
+        .mapboxgl-popup-content h4 {
+          margin:0;
+          display:block;
+          padding: 10px 10px 10px 10px;
+          font-weight:400;
+          margin: 0;
+        }
+
+        .mapboxgl-popup-content div {
+          padding:10px;
+
+        }
+
+        .mapboxgl-container .leaflet-marker-icon {
+          cursor:pointer;
+
+        }
+
+        .mapboxgl-popup-anchor-top > .mapboxgl-popup-content {
+          margin-top: 15px;
+        }
+
+        .mapboxgl-popup-anchor-top > .mapboxgl-popup-tip {
+          border-bottom-color: #91c949;
+
+        }
+      </style>
+  </head>
+
+  <body>
+    <div class='sidebar'>
+      <div class='heading'>
+        <h1>Registered Foreign NGO Representative Offices</h1>
+      </div>
+    <div id='listings' class='listings'></div>
+    </div>
+    <div id='map' class='map'> </div>
+
+  <script>
+  // This will let you use the .remove() function later on
+  if (!('remove' in Element.prototype)) {
+    Element.prototype.remove = function() {
+      if (this.parentNode) {
+          this.parentNode.removeChild(this);
+      }
+    };
+  }
+
+  mapboxgl.accessToken = 'pk.eyJ1IjoiamVzc2ljYWNoaW5maWxlIiwiYSI6ImNqMDAyN3FjNTA1Nzgyd2xzNzltcXQ1NmgifQ.uDti12v_OKz_yGqq5Bom0Q';
+
+  // This adds the map
+  var map = new mapboxgl.Map({
+    // container id specified in the HTML
+    container: 'map',
+    // style URL
+    style: 'mapbox://styles/mapbox/light-v9',
+    // initial position in [long, lat] format
+    center: [104.656404, 34.628137],
+    // initial zoom
+    zoom: 3
+  });
+
+  var stores = {
+    "type": "FeatureCollection",
+    "features": [
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.441491,
+            39.909478
+          ]
+        },
+        "properties": {
+          "orgname_en": "The Energy Foundation",
+          "orgname_ch": "能源基金会",
+          "psu_en": "The National Development and Reform Commission",
+          "psu_ch": "国家发展和改革委员会",
+          "country": "United States",
+          "sector": "Energy, Environment",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "China / 中国",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.406788,
+            39.900592
+          ]
+        },
+        "properties": {
+          "orgname_en": "China Kind Fund",
+          "orgname_ch": "中华爱心基金会",
+          "psu_en": "The National Development and Reform Commission",
+          "psu_ch": "国家发展和改革委员会",
+          "country": "Hong Kong",
+          "sector": "Ethnic affairs",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "China / 中国",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            113.274913,
+            23.130919
+          ]
+        },
+        "properties": {
+          "orgname_en": "The Chinese Manufacturers' Association of Hong Kong",
+          "orgname_ch": "香港中华厂商联合会",
+          "psu_en": "Guandong Department of Commerce",
+          "psu_ch": "广东省商务厅",
+          "country": "Hong Kong",
+          "sector": "Trade",
+          "regloc": "Guangdong",
+          "regdate": "January 19, 2017",
+          "actarea": "Guangdong province / 广东省",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            114.037005,
+            22.634390
+          ]
+        },
+        "properties": {
+          "orgname_en": "The International Peace Foundation",
+          "orgname_ch": "国际和平交流基金会",
+          "psu_en": "The Ministry of Civil Affairs",
+          "psu_ch": "民政部",
+          "country": "Hong Kong",
+          "sector": "Intercultural exchange, Social welfare",
+          "regloc": "Guangdong",
+          "regdate": "January 19, 2017",
+          "actarea": "Guangdong province / 广东省",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.524397,
+            31.205693
+          ]
+        },
+        "properties": {
+          "orgname_en": "Project HOPE",
+          "orgname_ch": "世界健康基金会",
+          "psu_en": "Shanghai Health and Family Planning Commission",
+          "psu_ch": "上海市卫生和计划生育委员会",
+          "country": "United States",
+          "sector": "Health, Disaster relief",
+          "regloc": "Shanghai",
+          "regdate": "January 17, 2017",
+          "actarea": "Shanghai, Inner Mongolia, Heilongjiang, Jiangsu, Zhejiang, Anhui, Fujian, Shandong, Guangdong, Guangxi, Sichuan, Guizhou, Yunnan, Tibet, Qinghai, Xinjiang / 上海、内蒙、辽宁、黑龙江、江苏、浙江、安徽、福建、山东、广东、广西、四川、贵州、云南、西藏、青海、新疆",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.517633,
+            31.226949
+          ]
+        },
+        "properties": {
+          "orgname_en": "The Russian Federation Chamber of Commerce and Industry",
+          "orgname_ch": "俄罗斯联邦工商会",
+          "psu_en": "Shanghai Municipal Commission of Commerce",
+          "psu_ch": "上海市商务委员会",
+          "country": "Russia",
+          "sector": "Energy, Environment",
+          "regloc": "Shanghai",
+          "regdate": "January 17, 2017",
+          "actarea": "Shanghai, Jiangsu, Zhejiang, Anhui, Fujian, Jiangxi, Hubei, Hunan, Guangdong, Jiangxi, Hainan, Chongqing, Sichuan, Guizhou, Yunnan, Tibet / 上海、江苏、浙江、安徽、福建、江西、湖北、湖南、广东、广西、海南、重庆、四川、贵州、云南、西藏",
+        }
+      }]
+    };
+  // This adds the data to the map
+  map.on('load', function (e) {
+    // This is where your '.addLayer()' used to be, instead add only the source without styling a layer
+    map.addSource("places", {
+      "type": "geojson",
+      "data": stores
+    });
+    // Initialize the list
+    buildLocationList(stores);
+
+  });
+
+  // This is where your interactions with the symbol layer used to be
+  // Now you have interactions with DOM markers instead
+  stores.features.forEach(function(marker, i) {
+    // Create an img element for the marker
+    var el = document.createElement('div');
+    el.id = "marker-" + i;
+    el.className = 'marker';
+    el.style.left='-10px';
+    el.style.top='-10px';
+    // Add markers to the map at all points
+    new mapboxgl.Marker(el)
+        .setLngLat(marker.geometry.coordinates)
+        .addTo(map);
+
+    el.addEventListener('click', function(e){
+        // 1. Fly to the point
+        flyToStore(marker);
+
+        // 2. Close all other popups and display popup for clicked store
+        createPopUp(marker);
+
+        // 3. Highlight listing in sidebar (and remove highlight for all other listings)
+        var activeItem = document.getElementsByClassName('active');
+
+        e.stopPropagation();
+        if (activeItem[0]) {
+           activeItem[0].classList.remove('active');
+        }
+
+        var listing = document.getElementById('listing-' + i);
+        listing.classList.add('active');
+
+    });
+  });
+
+
+  function flyToStore(currentFeature) {
+    map.flyTo({
+        center: currentFeature.geometry.coordinates,
+        zoom: 11
+      });
+  }
+
+  function createPopUp(currentFeature) {
+    var popUps = document.getElementsByClassName('mapboxgl-popup');
+    if (popUps[0]) popUps[0].remove();
+
+
+    var popup = new mapboxgl.Popup({closeOnClick: false})
+          .setLngLat(currentFeature.geometry.coordinates)
+          .setHTML('<h3>' + currentFeature.properties.orgname_en + " / " + currentFeature.properties.orgname_ch + '</h3>' +
+                   '<h4>' + "Registered on " + currentFeature.properties.regdate + '</h4>')
+          .addTo(map);
+  }
+
+
+  function buildLocationList(data) {
+    for (i = 0; i < data.features.length; i++) {
+      var currentFeature = data.features[i];
+      var prop = currentFeature.properties;
+
+      var listings = document.getElementById('listings');
+      var listing = listings.appendChild(document.createElement('div'));
+      listing.className = 'item';
+      listing.id = "listing-" + i;
+
+      var link = listing.appendChild(document.createElement('a'));
+      link.href = '#';
+      link.className = 'title';
+      link.dataPosition = i;
+      link.innerHTML = prop.orgname_en + ' / ' + prop.orgname_ch;
+
+      var details = listing.appendChild(document.createElement('div'));
+      details.innerHTML = '<b>PSU</b>: ' + prop.psu_en + ' / ' + prop.psu_ch
+      + '</br>' + '<b>Origin</b>: ' + prop.country
+      + '</br>' + '<b>Field of work</b>: ' + prop.sector
+      + '</br>' + '<b>Registration location</b>: ' + prop.regloc
+      + '</br>' + '<b>Date of registration</b>: ' + prop.regdate
+      + '</br>' + '<b>Permitted area of operations</b>: ' + prop.actarea
+      ;
+      if (prop.phone) {
+        details.innerHTML += ' &middot; ' + prop.phoneFormatted;
+      }
+
+
+
+      link.addEventListener('click', function(e){
+        // Update the currentFeature to the store associated with the clicked link
+        var clickedListing = data.features[this.dataPosition];
+
+        // 1. Fly to the point
+        flyToStore(clickedListing);
+
+        // 2. Close all other popups and display popup for clicked store
+        createPopUp(clickedListing);
+
+        // 3. Highlight listing in sidebar (and remove highlight for all other listings)
+        var activeItem = document.getElementsByClassName('active');
+
+        if (activeItem[0]) {
+           activeItem[0].classList.remove('active');
+        }
+        this.parentNode.classList.add('active');
+
+
+
+
+      });
+    }
+  }
+
+map.addControl(new mapboxgl.NavigationControl());
+
+    </script>
+  </body>
+</html>
