--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           cursor: pointer;
           height: 15px;
           width: 15px;
-          background-image: url(https://github.com/jessicachinafile/jessicachinafile.github.io/blob/master/marker-15.svg);
+          background-image: url("https://github.com/jessicachinafile/jessicachinafile.github.io/blob/master/marker-15.svg");
           background-color: rgba(0, 0, 0 0);
           transform: translate(28px, 56px, 0);
         }
@@ -232,6 +232,7 @@
             39.909478
           ]
         },
+
         "properties": {
           "orgname_en": "The Energy Foundation",
           "orgname_ch": "能源基金会",
@@ -242,6 +243,7 @@
           "regloc": "Beijing",
           "regdate": "January 23, 2017",
           "actarea": "China / 中国",
+
         }
       },
       {
