--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           cursor: pointer;
           height: 15px;
           width: 15px;
-          background-image: url(marker-15.svg);
+          background-image: url(/marker-15.svg);
           background-color: rgba(0, 0, 0 0);
           transform: translate(28px, 56px, 0);
         }
