fixed popup sizing and closeonclick

--- a/index.html
+++ b/index.html
@@ -134,12 +134,14 @@
         .mapboxgl-popup {
           padding-bottom: 25px;
           padding-left: 15px;
+          max-width: 500px;
 
         }
 
         .mapboxgl-popup-close-button {
           display:none;
         }
+
         .mapboxgl-popup-content {
           font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
           padding:0;
@@ -600,32 +602,24 @@
           "website_ch": "http://www.lksf.org/?lang=zh",
         }
       },
-
-
-
-
-
-
-
       {
         "type": "Feature",
         "geometry": {
           "type": "Point",
           "coordinates": [
-            121.524397,
-            31.205693
+            116.431826, 39.988442
           ]
         },
         "properties": {
-          "orgname_en": "Project HOPE",
-          "orgname_ch": "世界健康基金会",
-          "psu_en": "Shanghai Health and Family Planning Commission",
-          "psu_ch": "上海市卫生和计划生育委员会",
-          "originloc": "United States",
-          "sector": "Health, Disaster relief",
-          "regloc": "Shanghai",
-          "regdate": "January 17, 2017",
-          "actarea": "Shanghai, Inner Mongolia, Heilongjiang, Jiangsu, Zhejiang, Anhui, Fujian, Shandong, Guangdong, Guangxi, Sichuan, Guizhou, Yunnan, Tibet, Qinghai, Xinjiang",
+          "orgname_en": "Lipoid Stiftung",
+          "orgname_ch": "利保益基金会",
+          "psu_en": "Ministry of Civil Affairs",
+          "originloc": "Germany",
+          "sector": "Health, Nutrition, Education",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "China",
+          "website_en": "http://www.lipoid-stiftung.de/en/homepage/",
         }
       },
       {
@@ -633,22 +627,330 @@
         "geometry": {
           "type": "Point",
           "coordinates": [
-            121.517633,
-            31.226949
+            116.448349, 39.923569
+          ]
+        },
+        "properties": {
+          "orgname_en": "New Hope Foundation",
+          "orgname_ch": "新希望基金会",
+          "psu_en": "Ministry of Civil Affairs",
+          "originloc": "Hong Kong",
+          "sector": "Children - better word for this?, Disability",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "China",
+          "website_en": "http://hopefosterhome.com/",
+          "website_ch": "http://hopefosterhome.com/cn/",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.411589, 39.915316
+          ]
+        },
+        "properties": {
+          "orgname_en": "Paulson Institute",
+          "orgname_ch": "保尔森基金会",
+          "psu_en": "National Development and Reform Commission",
+          "originloc": "United States",
+          "sector": "?",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "China",
+          "website_en": "http://www.paulsoninstitute.org/",
+          "website_ch": "http://paulsoninstitute.org.cn/",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.314745, 39.938229
+          ]
+        },
+        "properties": {
+          "orgname_en": "Project HOPE (Beijing)",
+          "orgname_ch": "世界健康基金会",
+          "psu_en": "National Health and Family Planning Commission",
+          "originloc": "United States",
+          "sector": "Health",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "Beijing, Tianjin, Hubei",
+          "website_en": "http://www.projecthope.org.cn/English/",
+          "website_ch": "http://www.projecthope.org.cn/",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.524397, 31.205693
+          ]
+        },
+        "properties": {
+          "orgname_en": "Project HOPE (Shanghai)",
+          "orgname_ch": "世界健康基金会",
+          "psu_en": "Shanghai Health and Family Planning Commission",
+          "originloc": "United States",
+          "sector": "Health, Disaster relief",
+          "regloc": "Shanghai",
+          "regdate": "January 17, 2017",
+          "actarea": "Shanghai, Inner Mongolia, Heilongjiang, Jiangsu, Zhejiang, Anhui, Fujian, Shandong, Guangdong, Guangxi, Sichuan, Guizhou, Yunnan, Tibet, Qinghai, Xinjiang",
+          "website_en": "http://www.projecthope.org.cn/English/",
+          "website_ch": "http://www.projecthope.org.cn/",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.517633, 31.226949
           ]
         },
         "properties": {
           "orgname_en": "The Russian Federation Chamber of Commerce and Industry",
           "orgname_ch": "俄罗斯联邦工商会",
           "psu_en": "Shanghai Municipal Commission of Commerce",
-          "psu_ch": "上海市商务委员会",
           "originloc": "Russia",
-          "sector": "Energy, Environment",
+          "sector": "Trade",
           "regloc": "Shanghai",
           "regdate": "January 17, 2017",
           "actarea": "Shanghai, Jiangsu, Zhejiang, Anhui, Fujian, Jiangxi, Hubei, Hunan, Guangdong, Jiangxi, Hainan, Chongqing, Sichuan, Guizhou, Yunnan, Tibet",
         }
-      }]
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.43751, 39.910743
+          ]
+        },
+        "properties": {
+          "orgname_en": "Save the Children",
+          "orgname_ch": "国际救助儿童会",
+          "psu_en": "Ministry of Civil Affairs",
+          "originloc": "England and Wales",
+          "sector": "Children - better word for this?",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "China",
+          "website_en": "http://china.savethechildren.net/",
+          "website_ch": "http://www.savethechildren.org.cn/",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.494412, 39.934857
+          ]
+        },
+        "properties": {
+          "orgname_en": "Shin Shin Educational Foundation",
+          "orgname_ch": "欣欣教育基金会",
+          "psu_en": "State Council Overseas Chinese Affairs Office",
+          "originloc": "United States",
+          "sector": "Education",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "China",
+          "website_en": "http://www.shinshinfoundation.org/new_site/index.php/language/en/",
+          "website_ch": "http://www.shinshinfoundation.org/new_site/index.php/language/zh/",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            113.202606, 22.82947
+          ]
+        },
+        "properties": {
+          "orgname_en": "Shun Long Ren Ze Foundation",
+          "orgname_ch": "顺龙仁泽基金会",
+          "psu_en": "Ministry of Civil Affairs",
+          "originloc": "Hong Kong",
+          "sector": "Poverty alleviation, Education",
+          "regloc": "Guangdong",
+          "regdate": "January 19, 2017",
+          "actarea": "Guangdong",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.476043, 39.907472
+          ]
+        },
+        "properties": {
+          "orgname_en": "Smile Train",
+          "orgname_ch": "微笑列车基金会",
+          "psu_en": "National Health and Family Planning Commission",
+          "originloc": "United States",
+          "sector": "Health",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "China",
+          "website_en": "https://www.smiletrain.org/",
+          "website_ch": "http://www.smiletrainchina.org/",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.46496, 39.94697
+          ]
+        },
+        "properties": {
+          "orgname_en": "Stiftung Mercator",
+          "orgname_ch": "墨卡托基金会",
+          "psu_en": "Ministry of Civil Affairs",
+          "originloc": "Germany",
+          "sector": "?",
+          "regloc": "Beijing",
+          "regdate": "February 8, 2017",
+          "actarea": "China",
+          "website_en": "https://www.stiftung-mercator.de/en/",
+          "website_ch": "https://cn.stiftung-mercator.de/",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            113.32209, 23.132715
+          ]
+        },
+        "properties": {
+          "orgname_en": "Taiwan Trade Center",
+          "orgname_ch": "台湾贸易中心",
+          "psu_en": "Guangdong Department of Commerce",
+          "originloc": "Taiwan",
+          "sector": "Trade",
+          "regloc": "Guangdong",
+          "regdate": "January 19, 2017",
+          "actarea": "Guangdong, Guangxi, Fujian, Jiangxi, Hainan, Yunnan, Guizhou",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.441545, 39.909388
+          ]
+        },
+        "properties": {
+          "orgname_en": "U.S.-China Business Council (Beijing)",
+          "orgname_ch": "美国美中贸易全国委员会",
+          "psu_en": "Beijing Municipal Commission of Commerce",
+          "originloc": "United States",
+          "sector": "Trade",
+          "regloc": "Beijing",
+          "regdate": "March 24, 2017",
+          "actarea": "Beijing, Tianjin, Hebei",
+          "website_en": "https://www.uschina.org/",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.443836, 31.225679
+          ]
+        },
+        "properties": {
+          "orgname_en": "U.S.-China Business Council (Shanghai)",
+          "orgname_ch": "美国美中贸易全国委员会",
+          "psu_en": "Shanghai Municipal Commission of Commerce",
+          "originloc": "United States",
+          "sector": "Trade",
+          "regloc": "Shanghai",
+          "regdate": "January 17, 2017",
+          "actarea": "Shanghai, Shanxi, Inner Mongolia, Liaoning, Jilin, Heilongjiang, Jiangsu, Zhejiang, Anhui, Fujian, Jiangxi, Shandong, Henan, Hubei, Hunan, Guangdong, Guangxi, Hainan, Chongqing, Sichuan, Guizhou, Yunnan, Tibet, Shaanxi, Gansu, Qinghai, Ningxia, Xinjiang",
+          "website_en": "https://www.uschina.org/",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.458875, 39.918944
+          ]
+        },
+        "properties": {
+          "orgname_en": "World Economic Forum",
+          "orgname_ch": "世界经济论坛",
+          "psu_en": "National Development and Reform Commission",
+          "originloc": "United States",
+          "sector": "Economic Development?",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "China",
+          "website_en": "https://www.weforum.org/",
+          "website_ch": "https://cn.weforum.org/",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.355405, 39.92788
+          ]
+        },
+        "properties": {
+          "orgname_en": "World Wide Fund for Nature",
+          "orgname_ch": "世界自然基金会",
+          "psu_en": "State Forestry Administration",
+          "originloc": "Switzerland",
+          "sector": "Environment",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "Beijing, Tianjin, Shanghai, Chongqing, Heilongjiang, Jilin, Liaoning, Hebei, Henan, Jiangsu, Zhejiang, Anhui, Hunan, Hubei, Guizhou, Shaanxi, Gansu, Qinghai, Sichuan, Guangdong, Fujian, Shandong, Yunnan, Jiangxi, Guangxi, Xinjiang",
+          "website_en": "http://en.wwfchina.org/",
+          "website_ch": "http://www.wwfchina.org/",
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.446578, 31.188756
+          ]
+        },
+        "properties": {
+          "orgname_en": "Yin Shin Leung Charitable Foundation",
+          "orgname_ch": "应善良基金会",
+          "psu_en": "State Council Overseas Chinese Affairs Office",
+          "originloc": "Hong Kong",
+          "sector": "Education, Health?",
+          "regloc": "Shanghai",
+          "regdate": "January 17, 2017",
+          "actarea": "China",
+          "website_ch": "http://www.ysl-foundation.com/",
+        }
+      },
+
+    ]
     };
   // This adds the data to the map
   map.on('load', function (e) {
@@ -683,6 +985,7 @@
         // 2. Close all other popups and display popup for clicked store
         createPopUp(marker);
 
+
         // 3. Highlight listing in sidebar (and remove highlight for all other listings)
         var activeItem = document.getElementsByClassName('active');
 
@@ -694,8 +997,16 @@
         var listing = document.getElementById('listing-' + i);
         listing.classList.add('active');
 
+
+        //https://www.sitepoint.com/community/t/scrolltop-to-a-div-instead-of-body-solved/213672/3
+        //var sidebar = document.getElementById('sidebar');
+        //scrollTo(activeItem);
+
         //trying to get scrollbar to move to highlighted link; doesn't work but doesn't seem to break it
         //$(listing.classList.active).scrollTop();
+
+        //http://stackoverflow.com/questions/5007530/how-do-i-scroll-to-an-element-using-javascript
+        //window.scroll(0,findPos(document.getElementById(listing.classList.active)));
 
     });
   });
@@ -724,7 +1035,8 @@
     var html_ch = text_ch.link(currentFeature.properties.website_ch);
     if (typeof currentFeature.properties.website_ch === 'undefined') {html_ch = ""};
 
-    var popup = new mapboxgl.Popup({closeOnClick: false})
+//if you'd rather have a close button instead of having popups close by clicking elsewhere on the map, just take out the 2 lines related to .mapboxgl-popup-close-button in the CSS
+    var popup = new mapboxgl.Popup({closeOnClick: true})
           .setLngLat(currentFeature.geometry.coordinates)
           .setHTML(
                    '<h3>' + currentFeature.properties.orgname_en + ' / ' + currentFeature.properties.orgname_ch + '</h3>' +
