update to one NGO's sector

--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
           "orgname_ch": "国际作者和作曲者协会联合会",
           "psu_en": "National Copyright Administration",
           "originloc": "France",
-          "sector": "Intellectual Property ?  Trade?",
+          "sector": "Trade",
           "regloc": "Beijing",
           "regdate": "April 10, 2017",
           "actarea": "China",
